--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,34 @@
+
 * {
     padding: 0px;
     box-sizing: border-box;
     margin: 0px;
-    font-family:roboto mono,sans-serif;
+    font-family: roboto mono, sans-serif;
+
 }
 
 ul {
     list-style: none;
 }
 
-a {
+
+
+.a {
+    color: white;
     text-decoration: none;
+}
+
+.links {
+    text-decoration: none;
+    color: white;
+    transition: all 300ms;
 }
 
 
 
 /* header */
 
-
+.links:hover{transform: scale(1.1);color:blueviolet;}
 
 .header-index {
     background-color: black;
@@ -29,16 +40,27 @@ a {
     padding: 5px;
 }
 
+
+
+
+
+
 .header-nav ul {
     display: flex;
     padding: 5px;
     justify-content: space-around;
 }
 
+.head-nav ul:hover {
+    transform: scale(1.1);
+}
+
 .header-nav ul li {
     padding: 5px;
     text-align: center;
 }
+
+
 
 
 .nav-buscador {
@@ -77,22 +99,38 @@ footer section p {
     width: 200px;
 }
 
+
+
 .bi-facebook {
-    padding: 10px;
+    font-size: 1.5rem;
+    padding: 5px;
 }
 
+
 .bi-instagram {
-    padding: 10px;
+    font-size: 1.5rem;
+    padding: 5px;
 }
 
 .bi-github {
-    padding: 10px;
+    font-size: 1.5rem;
+    padding: 5px;
 }
 
 
-.ubicacion{grid-area: ubicacion;}
-.redes{grid-area: redes;}
-.derechos{grid-area: derechos;}
+
+
+.ubicacion {
+    grid-area: ubicacion;
+}
+
+.redes {
+    grid-area: redes;
+}
+
+.derechos {
+    grid-area: derechos;
+}
 
 
 
@@ -117,17 +155,25 @@ footer section p {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 80% auto;
         grid-template-areas:
-        "ubicacion redes"
-        "derechos derechos";
+            "ubicacion redes"
+            "derechos derechos";
     }
 
-    .footer{display: flex;justify-content:space-between;}
-
-    
-    .redes{display: flex;flex-direction: column;}
-
-    .derechos{background-color: grey;border-radius: 10px;}
-    
+    .footer {
+        display: flex;
+        justify-content: space-between;
     }
 
-   
+
+    .redes {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .derechos {
+        background-color: grey;
+        border-radius: 10px;
+    }
+
+}
+
