--- a/css/styles.css
+++ b/css/styles.css
@@ -26,12 +26,13 @@ ul {
 
 
 
+
 /* header */
 
-.links:hover{transform: scale(1.1);color:blueviolet;}
+.links:hover{transform: scale(1.1);color:rgb(6, 0, 125);}
 
 .header-index {
-    background-color: black;
+    background-color: rgba(0, 0, 255, 0.700);
     color: white;
 }
 
@@ -83,7 +84,7 @@ ul {
 
 footer {
     height: fit-content;
-    background-color: black;
+    background-color: rgba(0, 0, 255, 0.700);
     color: white;
     padding: 20px;
     text-align: center;
@@ -95,16 +96,15 @@ footer section p {
 
 .iframe-map {
     border-radius: 20px;
-    padding: 5px;
     width: 200px;
 }
-
 
 
 .bi-facebook {
     font-size: 1.5rem;
     padding: 5px;
 }
+
 
 
 .bi-instagram {
