--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,11 @@ footer section p {
     padding: 5px;
 }
 
+li i{transition: all 300ms;
+}
+
+li i:hover{font-size: 2rem;color:rgb(0, 0, 0)}
+
 
 
 
