--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,12 @@ ul {
 
 /* header */
 
+
+/*  header hover */
 .links:hover{transform: scale(1.1);color:rgb(6, 0, 125);}
+
+
+
 
 .header-index {
     background-color: rgba(0, 0, 255, 0.700);
@@ -50,6 +55,7 @@ ul {
     display: flex;
     padding: 5px;
     justify-content: space-around;
+    
 }
 
 .head-nav ul:hover {
@@ -152,7 +158,7 @@ li i:hover{font-size: 2rem;color:rgb(0, 0, 0)}
     }
 
     .header-nav {
-        width: 70%;
+        width: 60%;
     }
 
     footer {
@@ -181,4 +187,16 @@ li i:hover{font-size: 2rem;color:rgb(0, 0, 0)}
     }
 
 }
+
+
+
+
+
+/* Nuestra empresa CSS */
+
+
+.main-nuestraempresa{height: fit-content;}
+
+
+/* Contacto CSS */
 
