--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 * {
     padding: 0px;
     box-sizing: border-box;
@@ -31,7 +30,10 @@ ul {
 
 
 /*  header hover */
-.links:hover{transform: scale(1.1);color:rgb(6, 0, 125);}
+.links:hover {
+    transform: scale(1.1);
+    color: rgb(6, 0, 125);
+}
 
 
 
@@ -55,7 +57,7 @@ ul {
     display: flex;
     padding: 5px;
     justify-content: space-around;
-    
+
 }
 
 .head-nav ul:hover {
@@ -88,8 +90,7 @@ ul {
 
 /* footer */
 
-footer {
-    height: fit-content;
+footer {height: fit-content;
     background-color: rgba(0, 0, 255, 0.700);
     color: white;
     padding: 20px;
@@ -123,10 +124,14 @@ footer section p {
     padding: 5px;
 }
 
-li i{transition: all 300ms;
+li i {
+    transition: all 300ms;
 }
 
-li i:hover{font-size: 2rem;color:rgb(0, 0, 0)}
+li i:hover {
+    font-size: 2rem;
+    color: rgb(0, 0, 0)
+}
 
 
 
@@ -195,8 +200,35 @@ li i:hover{font-size: 2rem;color:rgb(0, 0, 0)}
 /* Nuestra empresa CSS */
 
 
-.main-nuestraempresa{height: fit-content;}
+.main-nuestraempresa {
+    height: 80vh;
+}
 
 
 /* Contacto CSS */
 
+.main-contacto {
+    height: 60vh;
+}
+
+
+.enviar:hover {padding: 4px;
+    color: black;
+    background-color: green;
+   border: none;
+    border-radius: 10px;
+
+
+}
+
+.borrar:hover {padding: 4px;
+    color: black;
+    background-color: red;
+   border: none;
+    border-radius: 10px;
+
+
+}
+
+
+/* arma tu pc CSS */
