--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 
 }
 
-ul {
+ul {text-decoration: none;
     list-style: none;
 }
 
@@ -100,6 +100,8 @@ footer {height: fit-content;
 footer section p {
     padding: 10px;
 }
+
+
 
 .iframe-map {
     border-radius: 20px;
@@ -201,7 +203,7 @@ li i:hover {
 
 
 .main-nuestraempresa {
-    height: 80vh;
+    height: 50vh;
 }
 
 
@@ -231,4 +233,40 @@ li i:hover {
 }
 
 
-/* arma tu pc CSS */
+/* sponsor css */
+
+.sponsor{
+    
+    width: 100%;
+    height: 110px;
+    background: black;
+  }
+
+
+  
+  .square {
+    width: 100%;
+    height: 100px;
+    background: black;
+    
+    
+  }
+
+  
+  
+  /* Animacion */
+  
+  .slider{
+    position: absolute;
+    animation: slider 3s infinite linear alternate;
+   
+  }
+  
+  @keyframes slider {
+    from {
+      transform: translate(0%, 0);
+    }
+    to {
+      transform: translate(90%, 0);
+    }
+  }
