--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,72 +1,24 @@
-* {
-    padding: 0px;
-    box-sizing: border-box;
-    margin: 0px;
-    font-family: roboto mono, sans-serif;
-}
-
-ul {
-    text-decoration: none;
-    list-style: none;
-
-    li {
-        text-decoration: none;
-
-
-        a {
-            text-decoration: none;
-        }
-
-    }
-
-
-}
+@import "./base/reset";
+@import "./base/typography";
+@import "./utils/variables";
+@import "./layout/header";
+@import "./layout/forms";
+@import "./components/buttons";
+@import "./components/slider";
+@import "./layout/footer";
+@import "./pages/nosotros";
 
 
 
+.categorias .Placasdevideo{font-size: 3rem;}
 
+.categorias .procesadores{font-size: 3rem;}
 
-$color-1: rgba(0, 0, 255, 0.700);
-$color-2: white;
-$color-3: black;
-$color-4: rgba(0, 0, 255, 0.700);
-
-
-
-.header-index {
-    background-color: $color-1;
-    padding: 15px;
-    color: $color-2;
-}
-
-@media (min-width:992px) {
-
-    .header-nav {
-        display: flex;
-        padding: 15px;
-        justify-content: space-between;
-        align-items: center;
-        width: 80%;
-    }
-
-    .navegador {
-        width: 75%;
-        display: flex;
-        justify-content: space-around;
-    }
-
-
-
-
-}
-
-.links {
-    text-decoration: none;
-    color: $color-2;
-    transition: all 300ms;
-
-    &:hover {
-        transform: scale(1.1);
-        color:$color-3;
-    }
+.categorias{
+    background-color: yellow;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    justify-content:space-around;
 }
