--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,5 +1,5 @@
 .links {
-    text-decoration: none;
+   text-decoration: none;
     color: $color-2;
     transition: all 300ms;
 
@@ -7,4 +7,21 @@
         transform: scale(1.1);
         color:$color-3;
     }
+}
+
+
+.comprar{ color: $color-1;
+    transition: all 100ms;
+    text-decoration: none;
+    
+    &:hover {color: $color-2;
+        background-color: $color-1;
+        border-radius: 10px;
+        padding: 2px;
+        text-decoration: none;
+        border: solid $color-1 1px;
+      
+        
+    
+}
 }
