--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,13 +4,17 @@ footer {height: fit-content;
     background-color: rgba(0, 0, 255, 0.700);
     color: white;
     padding: 20px;
-    
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &section p {
+        padding: 10px;
+    }
+    
 }
 
-footer section p {
-    padding: 10px;
-}
 
 
 
