--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,18 +7,8 @@
 @import "./components/slider";
 @import "./layout/footer";
 @import "./pages/nosotros";
+@import "./pages/monitores";
 
 
 
-.categorias .Placasdevideo{font-size: 3rem;}
 
-.categorias .procesadores{font-size: 3rem;}
-
-.categorias{
-    background-color: yellow;
-    height: fit-content;
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-    justify-content:space-around;
-}
