--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,4 +1,18 @@
-*{ font-family: roboto mono, sans-serif;
-    }
+* {
+    font-family: roboto mono, sans-serif;
+}
 
-h2{text-align: center;}    
+h2 {
+    text-align: center;
+    
+
+}
+
+article {
+    font-weight: bold;
+
+}
+
+p {
+    font-weight: bold;
+}
