--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,4 +1,5 @@
 $color-1: rgba(0, 0, 255, 0.700);
 $color-2: white;
 $color-3: black;
-$color-4: rgba(0, 0, 255, 0.700);
+$color-4: green;
+$color-5:red;
