--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 }
 
 ul {
+  text-decoration: none;
   list-style: none;
 }
 
@@ -14,6 +15,14 @@ ul {
 
 h2 {
   text-align: center;
+}
+
+article {
+  font-weight: bold;
+}
+
+p {
+  font-weight: bold;
 }
 
 .header-index {
@@ -44,8 +53,7 @@ form {
   padding: 5px;
   margin: 15px;
 }
-
-.formulario {
+form .formulario {
   padding: 20px;
   margin: 10px;
   border-radius: 20px;
@@ -99,8 +107,9 @@ input {
 
 .comprar {
   color: rgba(0, 0, 255, 0.7);
-  transition: all 100ms;
+  transition: all;
   text-decoration: none;
+  padding: 2px;
 }
 .comprar:hover {
   color: white;
@@ -109,9 +118,9 @@ input {
   padding: 2px;
   text-decoration: none;
   border: solid rgba(0, 0, 255, 0.7) 1px;
+  transform: scale(1, 2);
 }
 
-/* Animacion */
 /* sponsor css */
 .sponsor {
   height: 100px;
@@ -128,6 +137,7 @@ input {
   animation: slider 5s infinite linear;
 }
 
+/* Animacion */
 @keyframes slider {
   from {
     transform: translate(0, 0);
@@ -178,7 +188,6 @@ footersection p {
 li i {
   transition: all 300ms;
 }
-
 li i:hover {
   color: rgb(0, 0, 0);
 }
@@ -204,10 +213,6 @@ li i:hover {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 80% auto;
     grid-template-areas: "ubicacion redes" "derechos derechos";
-  }
-  .footer {
-    display: flex;
-    justify-content: space-between;
   }
   .redes {
     display: flex;
@@ -238,8 +243,7 @@ li i:hover {
     flex-wrap: wrap;
   }
 }
-
-.tarjeta {
+.section__tarjeta .tarjeta {
   margin: 5px;
   border: solid 2px black;
   border-radius: 15px;
@@ -251,14 +255,6 @@ li i:hover {
   align-items: center;
   text-align: center;
   padding: 2px;
-}
-.tarjeta .boton {
-  color: white;
-  background-color: rgba(0, 0, 255, 0.7);
-  border-radius: 10px;
-  padding: 2px;
-  text-decoration: none;
-  border: solid rgba(0, 0, 255, 0.7) 1px;
 }
 
 /*# sourceMappingURL=styles.css.map */
