--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,18 +1,19 @@
 .links {
-   text-decoration: none;
-    color: $color-2;
-    transition: all 300ms;
+text-decoration: none;
+color: $color-2;
+transition: all 300ms;
 
-    &:hover {
-        transform: scale(1.1);
+&:hover {
+      transform: scale(1.1);
         color:$color-3;
-    }
+  }
 }
 
 
 .comprar{ color: $color-1;
-    transition: all 100ms;
+    transition: all;
     text-decoration: none;
+    padding: 2px;
     
     &:hover {color: $color-2;
         background-color: $color-1;
@@ -20,8 +21,6 @@
         padding: 2px;
         text-decoration: none;
         border: solid $color-1 1px;
-      
-        
-    
-}
+        transform: scale(1,2);
+    }   
 }
