--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -45,11 +45,12 @@ footer {height: fit-content;
 
 li i {
     transition: all 300ms;
-}
 
-li i:hover {
+
+&:hover {
    
     color: rgb(0, 0, 0)
+}
 }
 
 
@@ -84,11 +85,7 @@ li i:hover {
             "derechos derechos";
     }
 
-    .footer {
-        display: flex;
-        justify-content: space-between;
-    }
-
+   
 
     .redes {
         display: flex;
