--- a/scss/layout/_forms.scss
+++ b/scss/layout/_forms.scss
@@ -7,7 +7,7 @@ form {
     padding: 5px;
     margin: 15px;
    
-}
+
 
 .formulario {
     padding: 20px;
@@ -18,6 +18,7 @@ form {
     background-color: $color-1;
     color: $color-2;
 
+}
 }
 
 label{margin: 10px;}
@@ -31,7 +32,7 @@ input{margin: 10px;}
     &:hover {
         
         color: $color-2;
-        background-color: green;
+        background-color: $color-4;
         border: none;
         padding: 4px;       
 
@@ -49,7 +50,7 @@ input{margin: 10px;}
     &:hover {
        
         color: $color-2;
-        background-color: red;
+        background-color: $color-5;
         border: none;
         padding: 4px;
         
