--- a/scss/pages/_monitores.scss
+++ b/scss/pages/_monitores.scss
@@ -37,12 +37,15 @@
     background-image: url(https://i.ibb.co/HCNVYdQ/monitor.png);
     width: 150px;
     height: 120px;
-    background-size: contain ;
+    background-size: contain;
 
-    &:hover{background-image: url(https://i.ibb.co/nkp1wSS/monitorodyssey.png);}
-    
+    &:hover {
+        background-image: url(https://i.ibb.co/nkp1wSS/monitorodyssey.png);
+    }
 
 
-   
+
+
 
 }
+
