se arreglo slider

--- a/css/styles.css
+++ b/css/styles.css
@@ -124,17 +124,21 @@ input {
 /* sponsor css */
 .sponsor {
   height: 100px;
+  position: relative;
   background: black;
+  overflow: hidden;
 }
 
 .square {
+  display: inline-block;
   height: 100px;
+  width: 800px;
   background: black;
 }
 
 .slider {
   position: absolute;
-  animation: slider 5s infinite linear;
+  animation: slider 8s infinite linear;
 }
 
 /* Animacion */
