--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,6 +1,7 @@
 /* footer */
 
-footer {height: fit-content;
+footer {
+    height: fit-content;
     background-color: rgba(0, 0, 255, 0.700);
     color: white;
     padding: 20px;
@@ -12,7 +13,7 @@ footer {height: fit-content;
     &section p {
         padding: 10px;
     }
-    
+
 }
 
 
@@ -47,10 +48,10 @@ li i {
     transition: all 300ms;
 
 
-&:hover {
-   
-    color: rgb(0, 0, 0)
-}
+    &:hover {
+
+        color: rgb(0, 0, 0)
+    }
 }
 
 
@@ -64,7 +65,8 @@ li i {
     grid-area: redes;
 }
 
-.derechos {margin-top: 20px;
+.derechos {
+    margin-top: 20px;
     grid-area: derechos;
 }
 
@@ -75,8 +77,9 @@ li i {
 
 @media (min-width:760px) {
 
-  
-    footer {height: fit-content;
+
+    footer {
+        height: fit-content;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 80% auto;
@@ -85,7 +88,7 @@ li i {
             "derechos derechos";
     }
 
-   
+
 
     .redes {
         display: flex;
@@ -93,9 +96,16 @@ li i {
         justify-content: space-around;
     }
 
-    .derechos {margin-top: 10px;
-        background-color: grey;
+    .derechos {
+        background-color: $color-6;
         border-radius: 10px;
+
+        p {
+            margin: 10px;
+        }
+
+
+
     }
 
 }
