--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,1 +1,29 @@
-.nosotros{height: 50vh;}
+.nosotros {
+    height: fit-content;
+    padding: 10px;
+    margin: 10px;
+
+    &-tittle {
+        text-align: center;
+        font-size: 2rem;
+        padding: 15px;
+
+    }
+
+    &-parrafo{ padding: 10px;
+    margin: 10px;}
+
+
+    @media (min-width: 768px) {
+        & {
+            height: 40vh;
+
+            &-title {
+                text-align:start;
+            }
+        }
+
+
+    }
+
+}
